[package]
name = "libasampo"
version = "0.0.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]
fakes = []

[dev-dependencies]
mockall = { version = "0.12.1" }

[dependencies]
mockall = { version = "0.12.1", optional = true }
glob = "0.3.1"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
symphonia = { version = "0.5.4", features = ["all-codecs"] }
thiserror = "1.0.58"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
